[workspace]
members = ["frontend", "backend", "shared"]
default-members = ["backend"]
resolver = "2"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1"
shared = { path = "./shared" }
serde_json = "1"
thiserror = "1"
uuid = { version = "1.17", features= ["serde", "v4"]}
