[package]
name = "sumi-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-rt = "2.7.0"
actix-web = { version = "4", features = ["rustls"] }
actix-cors = "0.6.4"
actix-service = "2.0.2"
actix-files = "0.6.2"
rustls = "0.20.7"
rustls-pemfile = "1"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2.2", features= ["serde", "v4"]}
env_logger = "0.10.0"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
r2d2 = "0.8.10"
dotenv = "0.15.0"
derive_more = "0.99.17"
anyhow = "1.0.66"
thiserror = "1.0.37"
rand = { version = "0.8", features=["std_rng"] }

# Auth
argon2 = { version = "0.4", features = ["std"] }
actix-web-lab = "0.17.0"
secrecy = { version = "0.8", features = ["serde"] }
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }