[package]
name = "sumi-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-rt = "2.8.0"
actix-web = { version = "4", features = ["rustls"] }
actix-cors = "0.6.4"
actix-service = "2.0.2"
actix-files = "0.6.2"
rustls = "0.20.8"
rustls-pemfile = "1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
env_logger = "0.10.0"
log = "0.4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
r2d2 = "0.8.10"
dotenv = "0.15.0"
derive_more = "0.99.17"
anyhow = "1"
thiserror = { workspace = true }
rand = { version = "0.8", features=["std_rng"] }
shared = { workspace = true }

# Auth
argon2 = { version = "0.5", features = ["std"] }
actix-web-lab = { version = "0.19.1", features = ["spa"] }
secrecy = { version = "0.8", features = ["serde"] }
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
