[package]
name = "sumi-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
dotenv_codegen = "0.15.0"
gloo = "0.8"
lazy_static = "1.4.0"
log = "0.4.8"
parking_lot = "0.12.1"
pulldown-cmark = "0.9"
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = "1"
thiserror = "1"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
wasm-bindgen = "=0.2.83"
wasm-logger = "0.2.0"
getrandom = { version = "0.2", features = ["js"] }
stylist = { version = "0.11", features = ["yew_integration"] }
wasm-bindgen-futures = "0.4.33"
once_cell = "1.16"
serde_json = "1.0.89"
ammonia = "3"
chrono-tz = { version = "0.8", features = [ "filter-by-regex" ] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
  "HtmlSelectElement",
]

[build]
target = "wasm32-unknown-unknown"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true